<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/report_detail_display_recycle_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/report_display_recycle_row_min_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtReportListItemDateTime"
            android:layout_width="@dimen/report_display_recycle_column_datetime_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/report_recycle_view_column_datetime"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />

        <TextView
            android:id="@+id/txtReportListItemAmount"
            android:layout_width="@dimen/report_display_recycle_column_width"
            android:layout_height="wrap_content"
            android:text="@string/report_recycle_view_column_amount"
            android:gravity="center"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />

        <TextView
            android:id="@+id/txtReportListItemTitle"
            android:layout_width="@dimen/report_display_recycle_column_width"
            android:layout_height="wrap_content"
            android:text="@string/report_recycle_view_column_title"
            android:gravity="center"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />

        <TextView
            android:id="@+id/txtReportListItemNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/report_recycle_view_column_note"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/divider_report_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_divider_height"
        android:layout_marginLeft="@dimen/main_summary_recycle_divider_margin"
        android:layout_marginRight="@dimen/main_summary_recycle_divider_margin"
        android:background="@color/main_color_listview_divider" />

</LinearLayout>