<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_summary_recycle_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/main_summary_recycle_row_min_height">

        <TextView
            android:id="@+id/txtMainSummaryCategory"
            android:layout_width="@dimen/main_layout_column_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_textview_category"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />

        <TextView
            android:id="@+id/txtMainSummaryAmount"
            android:layout_width="@dimen/main_layout_column_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_textview_amount"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />

        <TextView
            android:id="@+id/txtMainSummaryStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_textview_status"
            android:textColor="@color/main_color_listview_item"
            android:textSize="@dimen/report_display_recycle_text_size" />
    </LinearLayout>


    <TextView
        android:id="@+id/txtMainSummaryDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_divider_height"
        android:layout_marginLeft="@dimen/main_summary_recycle_divider_margin"
        android:layout_marginRight="@dimen/main_summary_recycle_divider_margin"
        android:background="@color/main_color_listview_divider" />

</LinearLayout>