<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.muoipt.ffm.view.ReportAddNewActivity">

    <ProgressBar
        android:id="@+id/add_report_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_8"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/add_new_report_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_report_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_20"
            app:layout_scrollFlags="scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/color_white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_scroll_report"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editAddReportTitle"
                    style="@style/addReportItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_new_report_row_height"
                    android:layout_marginTop="@dimen/dp_20"
                    android:hint="@string/add_new_report_title_text"
                    android:textColorHint="@color/color_black"
                    android:focusableInTouchMode="true"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

                <Button
                    android:id="@+id/btnListCategoryName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_new_report_row_height"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@drawable/button_with_ripple"
                    android:paddingLeft="@dimen/dp_16"
                    android:text="@string/add_new_report_category_text"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/sp_16"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/editAddReportAmount"
                    style="@style/addReportItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_new_report_row_height"
                    android:hint="@string/add_new_report_amount_text"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/color_black" />

                <EditText
                    android:id="@+id/editAddReportNote"
                    style="@style/addReportItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_new_report_row_height"
                    android:hint="@string/add_new_report_notes_text"
                    android:textColorHint="@color/color_black"
                    android:singleLine="true"
                    android:imeOptions="actionDone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/add_new_category_layout_margin_top"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnAddReportCancel"
                        android:layout_width="@dimen/add_new_category_button_width"
                        android:layout_height="@dimen/add_new_category_button_height"
                        android:background="@drawable/button_ripple_no_border"
                        android:text="@string/string_cancel"
                        android:textSize="@dimen/add_new_category_title_textsize" />

                    <Button
                        android:id="@+id/btnAddReportOk"
                        android:layout_width="@dimen/add_new_category_button_width"
                        android:layout_height="@dimen/add_new_category_button_height"
                        android:background="@drawable/button_ripple_no_border"
                        android:text="@string/string_ok"
                        android:textSize="@dimen/add_new_category_title_textsize" />
                </LinearLayout>

                <include layout="@layout/layout_placeholder_scrollview_for_softkeyboard" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
