<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muoipt.ffm.view.MainSummaryFragment">

    <LinearLayout
        android:id="@+id/layout_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_title_listView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_summary_recycle_title_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textviewCategory"
                android:layout_width="@dimen/main_layout_column_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_textview_category"
                android:textColor="@color/main_color_listview_title"
                android:textSize="@dimen/report_display_recycle_text_size" />

            <TextView
                android:id="@+id/txtDivider1"
                android:layout_width="@dimen/nav_divider_height"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textviewAmount"
                android:layout_width="@dimen/main_layout_column_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_textview_amount"
                android:textColor="@color/main_color_listview_title"
                android:textSize="@dimen/report_display_recycle_text_size" />

            <TextView
                android:id="@+id/txtDivider2"
                android:layout_width="@dimen/nav_divider_height"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_textview_status"
                android:textColor="@color/main_color_listview_title"
                android:textSize="@dimen/report_display_recycle_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_divider_height"/>

        <include layout="@layout/content_recycle_view_main_summary" />

    </LinearLayout>

</RelativeLayout>
